Working on polishing app for final release. Changed join group to join to save al ot of space in the header, and fixed the keyboard disappearing divs on mobile app.

--- a/client/common/main.scss
+++ b/client/common/main.scss
@@ -5,3 +5,8 @@
 .hidden {
   display: none;
 }
+
+// To fix the keyboard pushing divs off the screen on mobile app
+.content.overflow-scroll {
+  bottom: 0px !important;
+}
